--- a/style.css
+++ b/style.css
@@ -31,9 +31,14 @@ input[type='number'] {
 	width: 60px;
 }
 
-canvas {
+canvas,
+#output {
 	border: 5px solid rgb(128, 128, 128);
 	margin: 0 auto;
+}
+
+canvas {
+	display: none;
 }
 
 #warning {
