--- a/style.css
+++ b/style.css
@@ -31,9 +31,8 @@ input[type='number'] {
 	width: 60px;
 }
 
-canvas,
 #output {
-	border: 5px solid rgb(128, 128, 128);
+	border: 5px solid rgb(200, 200, 200);
 	margin: 0 auto;
 }
 
@@ -43,4 +42,16 @@ canvas {
 
 #warning {
 	font-style: italic;
+}
+
+table {
+	margin: auto;
+}
+
+th {
+	text-align: right;
+}
+
+td {
+	text-align: left;
 }
